# finance_news_rag

./: .gitignore  README.md  agent_example.py  docker-compose.yml  pipeline.py  pyproject.toml
agent/: README.md  api.py  config.yaml  start_api.sh
agent/src/: config_loader.py  rag_agent.py
src/: article_fetcher.py  elasticsearch_indexer.py  json_handler.py  text_processor.py
